--- a/SignalRDemo/Views/Home/ChatWithHod.cshtml
+++ b/SignalRDemo/Views/Home/ChatWithHod.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ChatMessage
 <h2>WebSocket Chat Application</h2>
@@ -11,8 +12,14 @@
         <button id="sendButton" onclick="sendMessage()">Send</button>
     </div>
 </div>
-
 <script>
+    connection.start()
+        .then(() => {
+            connection.invoke("Connect", "@Model.Username");
+        })
+        .catch(err => console.error(err.toString()));
+
+
     let socket;
     const username = "@Model.Username";
     const receiverUsername = "@Model.ReceiverUsername";
@@ -34,13 +41,11 @@
         };
 
         socket.onmessage = (event) => {
+
             const messagesList = document.getElementById('messagesList');
             const msgData = JSON.parse(event.data);
-            console.log("MEssage data : ", msgData);
-
-            console.log("receiver Username :::", receiverUsername);
-            console.log("Username :::", msgData);
             if (receiverUsername == msgData.Username && username == msgData.ReceiverUsername) {
+                
                 const li = document.createElement('li');
                 li.className = 'message received';
                 li.textContent = `${receiverUsername} : ${msgData.Message}`;
@@ -56,6 +61,10 @@
 
                 messagesList.appendChild(li);
                 messagesList.scrollTop = messagesList.scrollHeight;
+            }else{
+                var NotificationMessage = `${msgData.Username} Send Message : ${msgData.Message}`;
+                toastr.info(NotificationMessage);
+
             }
 
         };
@@ -91,11 +100,13 @@
         document.getElementById('messagesList').appendChild(li);
         messageInput.value = '';
         document.getElementById('messagesList').scrollTop = document.getElementById('messagesList').scrollHeight;
+
+        //var NotificationMessage = `${message.Username} Send Message : ${message.message}`;
+        //connection.invoke("SendNotification", "@Model.ReceiverUsername", NotificationMessage);
     }
 
     function handleKeyPress(event) {
         if (event.key === 'Enter') {
-            console.log("presss");
             event.preventDefault();
             sendMessage();
         }
