--- a/SignalRDemo/Views/Home/AllHods.cshtml
+++ b/SignalRDemo/Views/Home/AllHods.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@model StudentManagment.Models.DataModels.Student
 <div class="container-fluid">
     <div class="search-div">
         <div class="form-group div1">
@@ -240,7 +240,7 @@
                 dataSrc: "data",
                 success: function (response) {
                     if (response == false) {
-                        window.location.href ='/Home/Login';
+                        window.location.href = '/Home/Login';
                     }
                     sessionStorage.setItem("currentPageIndex", 0);
                     var newRows = response.data;
@@ -373,9 +373,21 @@
     }
 
 
-        //function startChat(studentId) {
+    //function startChat(studentId) {
 
-        //}
+    //}
 
+
+</script>
+
+@*SignalR Scripts*@
+
+<script>
+
+    connection.start()
+        .then(() => {
+            connection.invoke("Connect", "@Model.UserName");
+        })
+        .catch(err => console.error(err.toString()));
 
 </script>
