--- a/SignalRDemo/Views/Home/AllStudents.cshtml
+++ b/SignalRDemo/Views/Home/AllStudents.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@model SignalRDemo.Models.ProfessorHod
 <div class="container-fluid">
     <div class="search-div">
         <div class="form-group div1">
@@ -373,9 +373,21 @@
     }
 
 
-        //function startChat(studentId) {
+    //function startChat(studentId) {
 
-        //}
+    //}
 
+
+</script>
+
+@*SignalR Scripts*@
+
+<script>
+
+    connection.start()
+        .then(() => {
+            connection.invoke("Connect", "@Model.UserName");
+        })
+        .catch(err => console.error(err.toString()));
 
 </script>
